--- a/package.json
+++ b/package.json
@@ -1,18 +1,44 @@
 {
   "name": "android-tcu-mobile-library",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/cli": "^9.3.2",
+    "@react-native-firebase/app": "^16.4.5",
+    "@react-native-firebase/firestore": "^16.4.5",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-bottom-tabs": "^6.2.4",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.9.0",
     "expo": "~47.0.6",
+    "expo-dev-client": "~2.0.0",
+    "expo-file-system": "~15.1.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-system-ui": "~2.0.1",
+    "firebase": "^9.14.0",
+    "js-base64": "^3.7.3",
+    "moment": "^2.29.4",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-btr": "^2.2.0",
+    "react-native-flash-message": "^0.3.1",
+    "react-native-paper": "^4.12.5",
+    "react-native-pdf": "^6.6.2",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-windows": "^0.70.6",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "use-debounce": "^8.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
