--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.2.0",
     "expo": "~47.0.6",
-    "expo-dev-client": "~2.0.0",
+    "expo-dev-client": "~2.0.1",
     "expo-file-system": "~15.1.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
@@ -27,7 +28,9 @@
     "js-base64": "^3.7.3",
     "moment": "^2.29.4",
     "react": "18.1.0",
+    "react-instantsearch-native": "^6.38.1",
     "react-native": "0.70.5",
+    "react-native-axios": "^0.17.1",
     "react-native-btr": "^2.2.0",
     "react-native-flash-message": "^0.3.1",
     "react-native-paper": "^4.12.5",
