--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "axios": "^1.2.0",
     "expo": "~47.0.6",
     "expo-dev-client": "~2.0.1",
-    "expo-file-system": "~15.1.1",
+    "expo-file-system": "^15.1.1",
+    "expo-media-library": "^15.0.0",
+    "expo-permissions": "^14.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
@@ -35,13 +37,16 @@
     "react-native-flash-message": "^0.3.1",
     "react-native-paper": "^4.12.5",
     "react-native-pdf": "^6.6.2",
+    "react-native-pdf-view": "^0.3.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "11.23.1",
     "react-native-windows": "^0.70.6",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "use-debounce": "^8.0.4"
+    "use-debounce": "^8.0.4",
+    "watchman": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
